--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <h2 class="logo"><a href="#home">MrMOON</a></h2>
 
-    <a id="menu-icon">&#9776; Menu</a>
+    <a id="menu-icon">&#9776;</a>
 
     <nav class="navbar">
       <ul class="menu">
@@ -29,16 +29,17 @@
       --><li><a href="#work">Work</a></li><!--
       --><li><a href="#contance">Contact</a></li>
       <li><a href="Login.html">login/signup</a></li>
-      <label class="switch">
-  <input type="checkbox">
-  <span onclick="myFunction()" class="slider round"></span>
-</label>
       </ul>
     </nav>
 
   </div>
 </header>
+      <label class="switch">
+  <input type="checkbox">
+  <span onclick="myFunction()" class="slider round"></span>
+</label>
 <div class="content">
+    <br /><br />
     <h1 data-aos="zoom-in">Welcome</h1>
 </div>
 <br />
@@ -52,7 +53,7 @@
 <br />
 
 <br />
-<div class="b">
+<div data-aos="fade-right" class="b">
         <p>I'm also a programmer with creative thinking and wonderful ideas.</p>
         <p class="e">
         So, you can ensure your websites at me to get beautiful and modernic UI template.
@@ -77,9 +78,9 @@
     <h3 class="c">Contact Me</h3>
     <br />
 </div>
-<div data-aos="zoom-in-right" class="header4">
+<div class="header4">
     <br />
-    <p id="" class="ee">So, how was this? I don't know others but in my own opinion, this website is good enough for someone like me who just started web designing. I also want to know your opinion.</p>
+    <p data-aos="fade-right" id="" class="ee">So, how was this? I don't know others but in my own opinion, this website is good enough for someone like me who just started web designing. I also want to know your opinion.</p>
 </div>
 <br />
 <br />
@@ -93,4 +94,3 @@
 
 </body>
 </html>
-
