--- a/Login.html
+++ b/Login.html
@@ -21,7 +21,7 @@
 
 if (auth2.isSignedIn.get()) {
   var profile = auth2.currentUser.get().getBasicProfile();
-  console.log('ID: ' + profile.getId());
+  document.write('ID: ' + profile.getId());
   console.log('Full Name: ' + profile.getName());
   console.log('Given Name: ' + profile.getGivenName());
   console.log('Family Name: ' + profile.getFamilyName());
