--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
 <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
 </head>
+<style type="text/css" media="all">
+    
+</style>
 <body>
-<!-- partial:index.partial.html -->
 <header class="header">
 
   <div id="home" class="wrap">
@@ -46,7 +48,7 @@
 <br />
 <br /><br /><br />
 <div class="header1">
-    <p data-aos="fade-right" class="a">Hi. I'm MrMOON. A Web Designer</p>
+    <p data-aos="fade-right" class="a">Hi. I'm MrMOON. A Web Designer</p><br /><br />
     <img data-aos="zoom-in" class="gif" src="https://i.pinimg.com/originals/8b/35/fe/8b35fef55fba1a201c9c7a11d3ec3d64.gif" alt="" />
 </div>
 <br />
@@ -81,6 +83,7 @@
 <div class="header4">
     <br />
     <p data-aos="fade-right" id="" class="ee">So, how was this? I don't know others but in my own opinion, this website is good enough for someone like me who just started web designing. I also want to know your opinion.</p>
+    <br /><br /><br /><br />
 </div>
 <br />
 <br />
