--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <nav class="navbar">
       <ul class="menu">
-        <li><a class="active" href="#">Home</a></li><!--
+        <li><a  class="active" href="#home">Home</a></li><!--
       --><li><a href="#about">About</a></li><!--
       --><li><a href="#work">Work</a></li><!--
       --><li><a href="#contance">Contact</a></li>
@@ -78,6 +78,7 @@
 <br id="contance"  /><br /><br /><br /><br /><br /><br /><br /><br />
 <div data-aos="zoom-in-right">
     <h3 class="c">Contact Me</h3>
+    <a href="https://discord.gg/VumAURC">join my discord</a>
     <br />
 </div>
 <div class="header4">
