--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       --><li><a href="#about">About</a></li><!--
       --><li><a href="#work">Work</a></li><!--
       --><li><a href="#contance">Contact</a></li>
+            <li>  <a href="https://discord.gg/VumAURC">join my discord</a></li>
       <li><a href="Login.html">login/signup</a></li>
       </ul>
     </nav>
