--- a/index.html
+++ b/index.html
@@ -1,101 +1,104 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-      <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
   <title>MrMOON</title>
-  <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="bower_components/aos/dist/aos.css">
-
-<script src="bower_components/aos/dist/aos.js"></script>
-<link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
-<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Saay=swap'><link rel="stylesheet" href="./style.css">
+  <script src="https://kit.fontawesome.com/b496e467ba.js" crossorigin="anonymous"></script>
 </head>
-<style type="text/css" media="all">
-    
-</style>
+
 <body>
-<header class="header">
-
-  <div id="home" class="wrap">
-
-    <h2 class="logo"><a href="#home">MrMOON</a></h2>
-
-    <a id="menu-icon">&#9776;</a>
-
-    <nav class="navbar">
-      <ul class="menu">
-        <li><a  class="active" href="#home">Home</a></li><!--
-      --><li><a href="#about">About</a></li><!--
-      --><li><a href="#work">Work</a></li><!--
-      --><li><a href="#contance">Contact</a></li>
-            <li>  <a href="https://discord.gg/VumAURC">discord</a></li>
-      <li><a href="Login.html">login/signup</a></li>
-      </ul>
-    </nav>
-
+<!-- partial:index.partial.html -->
+<div class="n">
+  <header class="header-area">
+    <!-- site-navbar start -->
+    <div class="navbar-area">
+      <div class="container">
+        <nav class="site-navbar">
+          <!-- site logo -->
+          <a href="#home" class="site-logo">MrMOON</a>
+  
+          <!-- site menu/nav -->
+          <ul>
+            <li><a href="#">home</a></li>
+            <li><a href="#about">about</a></li>
+            <li><a href="#social">social</a></li>
+            <li><a href="#">post</a></li>
+          </ul>
+  
+          <!-- nav-toggler for mobile version only -->
+          <button class="nav-toggler">
+            <span></span>
+          </button>
+        </nav>
+      </div>
+    </div><!-- navbar-area end -->
+  </header>
+</div>
+<br><br><br>
+<div class="main">
+  <div class="header1">
+    <h1 class="he1">welcome <span class="dot">.</span>
+    </h1>
+    <br><br>
+    <h3 class="he2">----hay I Am MrMOON(sai pyae ko ko)----</h3>
   </div>
-</header>
-      <label class="switch">
-  <input type="checkbox">
-  <span onclick="myFunction()" class="slider round"></span>
-</label>
-<div class="content">
-    <br /><br />
-    <h1 data-aos="zoom-in">Welcome</h1>
+  <br><br>
+  <div class="header2">
+    <h4 class="text">hay i am mrmoon(sai pyae ko ko)and i am font end webdev i also play some games like minecraft,cs:go,c-ops.., i am 15 year old i am grade(9) and i am also artist(digital,traditional) that all! </h4>
+  </div>
+  <br><br><br id="about" ><br><br><br><br>
 </div>
-<br />
-<br />
-<br /><br /><br />
-<div class="header1">
-    <p data-aos="fade-right" class="a">Hi. I'm MrMOON. A Web Designer</p><br /><br />
-    <img data-aos="zoom-in" class="gif" src="https://i.pinimg.com/originals/8b/35/fe/8b35fef55fba1a201c9c7a11d3ec3d64.gif" alt="" />
-</div>
-<br />
-<br />
-
-<br />
-<div data-aos="fade-right" class="b">
-        <p>I'm also a programmer with creative thinking and wonderful ideas.</p>
-        <p class="e">
-        So, you can ensure your websites at me to get beautiful and modernic UI template.
-    </p>
-</div>
-<br id="about" /><br /><br /><br /><br /><br /><br /><br /><br />
-<div data-aos="fade-right" class="header2">
-    <h3 class="c">About This Website</h3>
-    <br />
-    <p id="" class="d">I just created this website for friendly challenge with my friend <a href="http://galactus-coder.42web.io/">Galatus</a> who's also a web designer like me. We started this challenge to improve each of our designing skills.<span id=""></span> In this challenge, we can add whatever we want or any template for our personal cv website but we must use dark theme for it. This challenge really helped me at studying web development.</p>
-</div>
-<br id="work"/><br /><br /><br /><br /><br /><br /><br /><br />
-    <img data-aos="fade-right" class="img" src="https://i.postimg.cc/7ZZwJLz1/IMG-20220113-131952.jpg" alt="" />
-    <br /><br /><br /><br /><br /><br /><br /><br /><br />
-<div data-aos="zoom-in-right">
-        <h2 class="c">My work</h2>
-        <br />
-    <p id="" class="mywork">This is one of my previous works which is completely created by using tables. That's website is really took a lot of times because I made that in all tables. Can you imagine how much of tables and nested tables I used? But this one is far more better and easy for me to create. I used div tags to design this layout. You can check how I built this by using Chrome Developer tool.</p>
-</div>
-<br id="contance"  /><br /><br /><br /><br /><br /><br /><br /><br />
-<div data-aos="zoom-in-right">
-    <h3 class="c">Contact Me</h3>
-    <a href="https://discord.gg/VumAURC">join my discord</a>
-    <br />
-</div>
-<div class="header4">
-    <br />
-    <p data-aos="fade-right" id="" class="ee">So, how was this? I don't know others but in my own opinion, this website is good enough for someone like me who just started web designing. I also want to know your opinion.</p>
-    <br /><br /><br /><br />
-</div>
-<br />
-<br />
-<br />
-<div hidden="" class="soc">
-    <img class="icon" src="https://icon-library.com/images/facebook-icon-transparent-background/facebook-icon-transparent-background-1.jpg" alt="" />
-    <img class="icon2" src="youtube.png" alt="" />
-</div>
+  <div class="about">
+    <h2 >About me</h2>
+    <br><br>
+    <h4  class="about2">
+      as u know i am 15 and i can write html,css,js, ans also i can code python alittle bit it might look like i am writing essay :) . i live in myanmar,mandalay,aungmyaetharzan i am grade(9)old stystem i am artist i suck at school lol
+    </h4>
+  </div>
+  <div class="about3">
+    <h2 >fun fact about me</h2>
+    <br><br>
+    <h4 class="about2">
+      i am really scare of ghosts 
+    </h4>
+  </div>
+  <div class="song">
+    <h2>song recommmand</h2>
+    <br><br>
+    <a href="https://www.youtube.com/watch?v=ggG9ySCChYw">The Neighbourhood - Softcore (Official Audio)</a>
+    <br><br>
+    <a href="https://www.youtube.com/watch?v=GCdwKhTtNNw">The Neighbourhood - Sweater Weather (Official Video)</a>
+    <br><br>
+    <a href="https://www.youtube.com/watch?v=JODQ7FlAaXg">RiceGum - Sucky Sucky (Love Me Long Time) [Official FULL Music Video](most chillest song)</a>
+    <br><br>
+    <a href="https://www.youtube.com/watch?v=kxy_ouh2WG8">3:00 Am - Zach Diamond (Official Audio)</a>
+    <br><br>
+    <a href="https://www.youtube.com/watch?v=XEjLoHdbVeE">ABBA - Gimme! Gimme! Gimme! (A Man After Midnight)(my fav song flex gains)</a>
+    <br><br>
+    <a href="https://www.youtube.com/watch?v=9xolrAr2cJs">Cheriimoya - Living Life, In The Night (feat. Sierra Kidd) [LYRICS]</a>
+    <br><br>
+    <a href="https://www.youtube.com/watch?v=QJJYpsA5tv8">Bring Me The Horizon - Can You Feel My Heart(gigachad)</a>
+    <br><br>
+    <a href="https://www.youtube.com/watch?v=f0JnyHGihE4">Rebzyyx - all i want is you (Lyrics) ft. hoshie star(kinda psychopath song)</a>
+    <br><br>
+    <a href="https://www.youtube.com/watch?v=fwcYuL6Z74E">MKJ - Time (ft. Evangelia)</a>
+  </div>
+  <br><br><br><br><br>
+  <div id="social" class="social">
+    <h4 class="feel">send feelback if u find some issue</h4>
+    <div class="icon1">
+    <a class="icon" href="https://www.facebook.com/SaiPyaeko333"><i class="fa-brands fa-square-facebook"></i></a>
+    <a class="icon" href=""><i class="fa-brands fa-youtube"></i></a>
+    <a class="icon" href="https://github.com/MrMOON224"><i class="fa-brands fa-square-github"></i></a>
+    <a class="icon" href="https://discord.gg/VumAURC"><i class="fa-brands fa-discord"></i></a>
+    <a class="icon" href="https://www.instagram.com/sai_pyae_ko_ko/"><i class="fa-brands fa-instagram"></i></a>
+    </div>
+    <div>
+      
+    </div>
+  </div>
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
-
+  <script  src="./script.js"></script>
 </body>
 </html>
