--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>MrMOON</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Saay=swap'><link rel="stylesheet" href="./style.css">
   <script src="https://kit.fontawesome.com/b496e467ba.js" crossorigin="anonymous"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
