--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <div id="social" class="social">
     <h4 class="feel">send feelback if u find some issue</h4>
     <div class="icon1">
-    <a class="icon" href="https://www.facebook.com/SaiPyaeko333"><i class="fa-brands fa-square-facebook"></i></a>
+    <a class="icon" href="https://www.facebook.com/haha3327/"><i class="fa-brands fa-square-facebook"></i></a>
     <a class="icon" href=""><i class="fa-brands fa-youtube"></i></a>
     <a class="icon" href="https://github.com/MrMOON224"><i class="fa-brands fa-square-github"></i></a>
     <a class="icon" href="https://discord.gg/VumAURC"><i class="fa-brands fa-discord"></i></a>
