--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         <nav class="sticky top-0 z-50 transition-colors duration-300">
             <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex justify-between items-center">
                 <!-- Branding uses subtle tonal accent -->
-                <span class="font-extrabold text-xl tonal-accent" data-i18n="title_name">saipyaekoko (fudoo)</span>
+                <span class="font-extrabold text-xl tonal-accent" data-i18n="title_name"> (fudoo)</span>
                 <div class="flex items-center space-x-6">
                     <div class="space-x-6 hidden md:flex text-base font-medium">
                         <!-- Navigation links use new subtle accent on hover -->
@@ -570,3 +570,4 @@
 
 </body>
 </html>
+
