--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
         // --- TRANSLATION DATA --- (Content remains consistent)
         const dictionary = {
             title_name: { 
-                en: "saipyaekoko (fudoo)", 
-                my: "စိုင်းပြည့်ကိုကို (ဖူဒူး)" 
+                en: "(fudoo)", 
+                my: "(ဖူဒူး)" 
             },
             title_role: { 
                 en: "18-Year-Old Vision-Driven Creator & Technical Analyst",
@@ -570,4 +570,5 @@
 
 </body>
 </html>
+
 
